--- a/src/Appli.scss
+++ b/src/Appli.scss
@@ -8,6 +8,7 @@
     position: relative;
 
     .scrollCom {
+        opacity: .9;
         cursor: pointer;
         display: flex;
         align-items: center;
