--- a/src/composants/Commentaire.scss
+++ b/src/composants/Commentaire.scss
@@ -5,6 +5,7 @@
    padding: 5%;
    margin: 0 3px 0 0;
    background-color: #111;
+   opacity: .9;
    border-radius: 10px;
    gap: 15px;
    align-items: flex-start;
