--- a/src/composants/Connexion.scss
+++ b/src/composants/Connexion.scss
@@ -1,4 +1,5 @@
 .containerCnx {
+    opacity: .9;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -22,6 +23,7 @@
     gap: 10px;
 
     .infoUtil {
+        opacity: .9;
         position: relative;
         display: flex;
         align-items: center;
