can add draggable object in multiple droppable areas, however draggables can't be interchangeably be dragged between droppable areas, you have to work on it, good job today though

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,11 @@
   width: fit-content;
 }
 
+.drop-container {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
 .container-drop {
   border-radius: 4px;
   border: 1px solid black;
