I decided to use the dnd-kit library, for the multiple drag and drop containers, I really wanted to do it on my own, but it's a real pain. At least I tried

--- a/src/App.css
+++ b/src/App.css
@@ -48,12 +48,16 @@
   width: fit-content;
 }
 
+#root {
+  display: flex;
+}
+
 .drop-container {
   display: flex;
   flex-flow: row nowrap;
 }
 
-.container-drop {
+.drop {
   border-radius: 4px;
   border: 1px solid black;
   width: 500px;
