--- a/simple-trello/src/index.css
+++ b/simple-trello/src/index.css
@@ -16,6 +16,9 @@ body,
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
+ul {
+    padding: 0 !important;
+}
 
 ::-webkit-scrollbar {
     width: 4px;
